--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ body {
   color: black;
   margin: 0;
   max-width: 100vw;
+  max-height: 100vh;
+}
+body > span:first-of-type {
+  float: right;
+}
+body > span:nth-child(11) {
+  float: right;
+}
+
+.clear {
+  clear: both;
 }
 
 .container {
@@ -15,6 +26,7 @@ body {
   position: relative;
   gap: 20px;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -22,6 +34,11 @@ body {
   background-color: lightgrey;
 }
 
+@media only screen and (max-width: 480px) {
+  .card {
+    width: 90%;
+  }
+}
 h3 {
   background-color: black;
   color: white;
